# MLStudyNest

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.debug  Dockerfile.dev
backend/migrations/: 001_init.sql
backend/src/: main.rs
docs/: API.md  MIGRATION_REPORT.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  app.config.ts  nuxt.config.ts  package-lock.json  package.json
frontend/app/assets/css/: main.css
frontend/app/components/: AuthModal.vue  CommunityPanel.vue  FlashcardsPanel.vue  ProfileModal.vue  PromoMusicAd.vue  QuizPanel.vue  StudyBlock.vue  StudyBuddy.vue  TopicDrawer.vue  TopicFigure.vue
frontend/app/composables/: useApi.ts
frontend/app/data/: learning-content.ts  topic-figures.ts
frontend/app/pages/: index.vue
frontend/public/audio/: PUT_reward-song.mp3_HERE.txt
frontend/server/api/: [...path].ts
scripts/: dev.sh  local-dev.md
