[package]
name = "mlstudynest-api"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "mlstudynest-api"
path = "src/main.rs"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
password-hash = { version = "0.5", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std", "getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
